WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34183
Crash caused by anonymous list item
https://bugs.webkit.org/show_bug.cgi?id=34183
Summary
Crash caused by anonymous list item
mitz
Reported
2010-01-26 14:23:42 PST
<
rdar://problem/7576663
> Patch forthcoming.
Attachments
Make the search for enclosing list and previous list item render tree-based rather than DOM based
(47.74 KB, patch)
2010-01-26 14:29 PST
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-01-26 14:29:23 PST
Created
attachment 47449
[details]
Make the search for enclosing list and previous list item render tree-based rather than DOM based
mitz
Comment 2
2010-01-26 14:50:20 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/53868
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug